js/src/tests/test262/built-ins/Error/prototype/stack/setter-proxy-wrapping-prototype.js






























var set = Object.getOwnPropertyDescriptor(Error.prototype, 'stack').set;

var trapLog = [];
var p = new Proxy(Error.prototype, allowProxyTraps({
  getOwnPropertyDescriptor: function (t, key) {
    trapLog.push(['gOPD', key]);
    return Object.getOwnPropertyDescriptor(t, key);
  },
  set: function (t, key, value) {
    trapLog.push(['set', key, value]);
    
    return true;
  }
}));




set.call(p, 'sentinel');

assert(trapLog.length >= 1, 'at least one trap was invoked');
assert.sameValue(trapLog[0][0], 'gOPD', 'getOwnPropertyDescriptor trap fired first');
assert.sameValue(trapLog[0][1], 'stack', 'getOwnPropertyDescriptor trap was called for "stack"');




var sawSet = false;
for (var i = 0; i < trapLog.length; ++i) {
  if (trapLog[i][0] === 'set') {
    sawSet = true;
    assert.sameValue(trapLog[i][1], 'stack', 'set trap was called for "stack"');
    assert.sameValue(trapLog[i][2], 'sentinel', 'set trap received the value');
  }
}
assert.sameValue(sawSet, true, 'set trap was invoked');

reportCompare(0, 0);
